--- a/source/sass/utils/fonts.scss
+++ b/source/sass/utils/fonts.scss
@@ -6,7 +6,7 @@
     local("Yeseva One"),
     url("../fonts/yesevaone.woff2") format("woff2"),
     url("../fonts/yesevaone.woff") format("woff");
-};
+}
 
 @font-face {
   font-family: "Roboto";
@@ -47,4 +47,3 @@
     url("../fonts/Robotobold.woff2") format("woff2"),
     url("../fonts/Robotobold.woff") format("woff");
 }
-
