--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -7,6 +7,7 @@
   top: 50%;
   width: 15px;
   height: 30px;
+  padding: 0;
   background-color: transparent;
   background-repeat: no-repeat;
   border: none;
