--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,12 +1,29 @@
 .footer {
-  padding-top: 68px;
-  padding-bottom: 68px;
+  padding: 68px 0;
   background-color: $deep-black;
+
+  @media (max-width: $tablet-width-only) {
+    font-size: 14px;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    padding: 40px 0;
+    line-height: 20px;
+  }
 }
 
 .footer__logo {
   @media (min-width: $desktop-width) {
     margin-right: 125px;
+  }
+
+  @media (max-width: $tablet-width-only) {
+    display: none;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    display: block;
+    margin-top: 26px;
   }
 
   &:hover,
@@ -21,6 +38,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: $tablet-width-only) {
+    justify-content: space-between;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    flex-direction: column-reverse;
+  }
+}
+
+.footer__social {
+  @media (max-width: $mobile-width-only) {
+    margin-top: 26px;
+  }
 }
 
 .footer__social-link {
@@ -36,6 +67,14 @@
   @media (min-width: $desktop-width) {
     margin-left: 160px;
     margin-right: 68px;
+  }
+
+  @media (max-width: $tablet-width-only) {
+    margin: 0;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    margin-top: 26px;
   }
 
   color: rgba($warm-white, 0.8);
