--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,15 +1,34 @@
 .reviews {
   padding-bottom: 112px;
+
+  @media (max-width: $tablet-width-only) {
+    padding-bottom: 87px;
+  }
 }
 
-.reviews__list {
+.reviews__slider-list {
   margin-top: 58px;
+
+  @media (max-width: $tablet-width-only) {
+    margin-top: 143px;
+    padding-left: 9%;
+    padding-right: 7%;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    padding: 0;
+  }
 }
 
 .reviews__item {
   display: flex;
   align-items: center;
   padding-left: 120px;
+
+  @media (max-width: $tablet-width-only) {
+    display: block;
+    padding: 0;
+  }
 }
 
 .reviews__img-wrapper {
@@ -19,6 +38,21 @@
 
 .reviews__img {
   display: block;
+
+  @media (max-width: $tablet-width-only) {
+    position: absolute;
+    top: -95px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    width: 302px;
+    height: 208px;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    width: 242px;
+    height: 166px;
+  }
 }
 
 .reviews__text-wrapper {
@@ -30,7 +64,17 @@
     padding: 110px 90px 110px 140px;
     width: 403px;
   }
+
   background-color: $deep-black;
+
+  @media (max-width: $tablet-width-only) {
+    padding: 148px 85px 33px;
+    text-align: center;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    padding: 118px 30px 40px;
+  }
 }
 
 .reviews__author {
@@ -44,6 +88,7 @@
   margin-bottom: 40px;
   font-size: 14px;
   font-weight: 300;
+  color: rgba($white, 0.7);
 }
 
 .reviews__info {
@@ -52,6 +97,11 @@
   font-size: 12px;
   line-height: 18px;
   color: $medium-brown;
+
+  @media (max-width: $tablet-width-only) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .reviews__social-list {
@@ -71,6 +121,41 @@
 
     .reviews__social-icon {
       fill: $white;
+    }
+  }
+}
+
+.reviews__slider-button {
+  @media (max-width: $tablet-width-only) {
+    top: 39px;
+    width: 59px;
+    height: 16px;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    &--prev {
+      left: 15%;
+      background-image: url("../../img/arrowPrevLong.svg");
+    }
+
+    &--next {
+      right: 15%;
+      background-image: url("../../img/arrowNextLong.svg");
+    }
+  }
+
+  @media (max-width: $mobile-width-only) {
+    width: 15px;
+    height: 19px;
+
+    &--prev {
+      left: 0;
+      background-image: url("../../img/arrowPrev.svg");
+    }
+
+    &--next {
+      right: 0;
+      background-image: url("../../img/arrowNext.svg");
     }
   }
 }
